--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "express": "^4.16.4",
+    "http": "^0.0.0",
+    "morgan": "^1.9.1",
+    "path": "^0.12.7",
+    "socket.io": "^2.2.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
